--- a/.github/workflows/action-setup-docker.yml
+++ b/.github/workflows/action-setup-docker.yml
@@ -3,8 +3,8 @@ name: Test docker
 on:
   push:
     paths:
-      - '.github/actions/docker-setup/**'
-      - 'action-docker-setup.yml'
+      - '.github/actions/setup-docker/**'
+      - 'action-setup-docker.yml'
   workflow_dispatch:
 
 jobs:
@@ -29,7 +29,7 @@ jobs:
         continue-on-error: true
 
       - name: Setup Docker
-        uses: ./.github/actions/docker-setup
+        uses: ./.github/actions/setup-docker
         with:
           verify: 'true'
 
